[Xamarin.Android.Build.Tasks] Add support for Generated Resources via Xamarin Studio
Context https://bugzilla.xamarin.com/show_bug.cgi?id=5870

One of the issues with the current resource designer implementation
is that it is not in the intermediate directory. As a result it is
always causing problems for Source control systems.

Additionally normal .net apps create generated files in the
intermediate directory and make use of the a target and make use
of "build time code generation" [1] by making use if the Generator
metadata in MSBuild. Visual studio already has support for this
however Xamarin Studio did not.

The issue with Xamarin Studio is now being solved. With this commit
we will introduce a new target UpdateGeneratedFiles which can be
used by both VS and XS to generate the Resource.Designer.xx file
in the intermediate directory.

All of this is current protected by the AndroidUseIntermediateDesignerFile
property which defaults to false.

[1] https://mhut.ch/journal/2015/06/30/build_time_code_generation_msbuild

--- a/src/Xamarin.Android.Build.Tasks/Xamarin.Android.Common.targets
+++ b/src/Xamarin.Android.Build.Tasks/Xamarin.Android.Common.targets
@@ -443,6 +443,10 @@ Copyright (C) 2011-2012 Xamarin. All rights reserved.
   </_PostBuildTargets>
 </PropertyGroup>
 
+<PropertyGroup >
+   <CoreCompileDependsOn>UpdateGeneratedFiles;$(CoreCompileDependsOn)</CoreCompileDependsOn>
+</PropertyGroup>
+
 <PropertyGroup Condition="'$(AndroidApplication)' != '' And $(AndroidApplication)">
   <BuildDependsOn>
     _ValidateLinkMode;
@@ -523,6 +527,10 @@ Copyright (C) 2011-2012 Xamarin. All rights reserved.
 		<Compile Remove="@(CorrectCasedItem)" Condition=" '$(AndroidResgenFile)' != '' "/>
 		<Compile Include="$(_AndroidResourceDesignerFile)" />
 	</ItemGroup>
+</Target>
+
+<Target Name="UpdateGeneratedFiles"
+		DependsOnTargets="_RemoveLegacyDesigner;UpdateAndroidResources">
 </Target>
 
 <Target Name="_ValidateAndroidPackageProperties">
