--- a/src/Xamarin.Android.Build.Tasks/Xamarin.Android.Bindings.targets
+++ b/src/Xamarin.Android.Build.Tasks/Xamarin.Android.Bindings.targets
@@ -282,6 +282,8 @@ Copyright (C) 2012 Xamarin Inc. All rights reserved.
   <Target Name="_SetupDesignTimeBuildForBuild">
     <PropertyGroup>
       <DesignTimeBuild Condition=" '$(DesignTimeBuild)' == '' ">false</DesignTimeBuild>
+      <XADesignTimeBuild Condition="'$(XADesignTimeBuild)'=='' and '$(DesignTimeBuild)'=='true'">true</XADesignTimeBuild>
+      <XADesignTimeBuild Condition="'$(XADesignTimeBuild)'=='' and '$(DesignTimeBuild)'=='false'">false</XADesignTimeBuild>
     </PropertyGroup>
   </Target>
 
@@ -294,7 +296,7 @@ Copyright (C) 2012 Xamarin Inc. All rights reserved.
       AndroidNdkDirectory="$(_AndroidNdkDirectory)"
       Assemblies="@(ReferencePath);@(ReferenceDependencyPaths)"
       CacheFile="$(IntermediateOutputPath)resourcepaths.cache"
-      Condition=" '$(DesignTimeBuild)' != 'true' "
+      Condition=" '$(XADesignTimeBuild)' == '' Or '$(XADesignTimeBuild)' == 'false'"
     />
   </Target>
 
