--- a/src/Xamarin.Android.Build.Tasks/Xamarin.Android.Common.targets
+++ b/src/Xamarin.Android.Build.Tasks/Xamarin.Android.Common.targets
@@ -366,6 +366,8 @@ Copyright (C) 2011-2012 Xamarin. All rights reserved.
 <Target Name="_SetupDesignTimeBuildForBuild">
 	<PropertyGroup>
 		<DesignTimeBuild Condition=" '$(DesignTimeBuild)' == '' ">false</DesignTimeBuild>
+		<XADesignTimeBuild Condition="'$(XADesignTimeBuild)'=='' and '$(DesignTimeBuild)'=='true'">true</XADesignTimeBuild>
+		<XADesignTimeBuild Condition="'$(XADesignTimeBuild)'=='' and '$(DesignTimeBuild)'=='false'">false</XADesignTimeBuild>
 	</PropertyGroup>
 </Target>
 
@@ -380,7 +382,7 @@ Copyright (C) 2011-2012 Xamarin. All rights reserved.
    Assemblies="@(ReferencePath);@(ReferenceDependencyPaths)"
    CacheFile="$(_AndroidResourcePathsCache)"
    YieldDuringToolExecution="$(YieldDuringToolExecution)"
-   Condition=" '$(DesignTimeBuild)' == 'false' Or '$(DesignTimeBuild)' == '' "
+   Condition=" '$(XADesignTimeBuild)' == '' Or '$(XADesignTimeBuild)' == 'false'"
   />
 </Target>
 
